# dmf2mod

./: .clang-tidy  .editorconfig  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  bomb_jack.dmf  build  build.bat  converter.cpp  converter.h  core.cpp  core.h  dmf.c  dmf.cpp  dmf.h  dmf2mod.c  dmf2mod.cpp  dmf2mod.js  dmf2mod.wasm  dmf2mod_config.h.in  instruments.c  instruments.h  make.bat  mod.c  mod.cpp  mod.h  module.cpp  module.h  modules.cpp  modules.h  patterns.c  patterns.h  system_info.c  system_info.h  vcpkg.json  (+1 more)
.github/workflows/: build.yml  c-cpp.yml  codeql-analysis.yml  gh-pages.yml
cmake/modules/: FindZSTR.cmake  FindZlibStatic.cmake  Findgcem.cmake
cmake/toolchains/: wasm32-emscripten-vcpkg.cmake
console/: CMakeLists.txt  console.cpp
include/: all_modules.h  config.h  config.h.in  core.h  dmf2mod.h  dmf2mod_config.h  modules.h  version.h  version.h.in
include/core/: config.h  config_types.h  conversion_options.h  conversion_options_base.h  data.h  effects.h  factory.h  generated_data.h  global_options.h  module.h  module_base.h  note.h  options.h  options_base.h  registrar.h  state.h  status.h
include/modules/: debug.h  dmf.h  mod.h
include/utils/: hash.h  stream_reader.h  utils.h
src/: CMakeLists.txt  core.cpp  dmf2mod.cpp  modules.cpp
src/console/: console.cpp
src/core/: config.cpp  conversion_options.cpp  conversion_options_base.cpp  factory.cpp  global_options.cpp  module.cpp  module_base.cpp  options.cpp  options_base.cpp  registrar.cpp  status.cpp
src/modules/: debug.cpp  dmf.cpp  mod.cpp
src/utils/: utils.cpp
src/webapp/: pre.js  webapp.cpp
src/webapp/ui/: index.html  webapp.js
webapp/: CMakeLists.txt  Makefile  cmake_install.cmake  dmf2mod.js  dmf2mod.wasm  index.html  pre.js  setup.js  webapp.cpp  webapp.js
webapp/ui/: index.html  webapp.js
zlib/: .gitignore
